# tifflib

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.cpp  glad.h
include/shaders/: gears.vsh  viewShader.vs
man/: CMakeLists.txt  tifflib.1.md
python/: setup.py
python/pytifflib/: __main__.py
src/: CMakeLists.txt  fs.cpp  fs.h  gl_util.h  kitty_util.cpp  kitty_util.h  lib.h  openslide-source.cc  openslide-source.h  shader.h  slide.cpp  slide.h  tifflib.cpp  window.cpp  window.h
